- FindSDL2.cmake - FindSDL2_image.cmake - Rendering test (WIP)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,4 +23,5 @@ endif()
 add_subdirectory(Core)
 add_subdirectory(Runtime)
 add_subdirectory(Networking)
+add_subdirectory(Rendering)
 add_subdirectory(Engine)
