--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -9,7 +9,9 @@ file(GLOB_RECURSE SRC_FILES
 set(SourceDir ${PROJECT_SOURCE_DIR}/Source)
 
 include_directories ("../Core/Source")
+include_directories ("../Rendering/Source")
 
 add_library(Engine STATIC ${SRC_FILES})
 
+target_link_libraries(Engine Rendering)
 target_link_libraries(Engine Core)
