Added assimp as git submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ IF(WIN32)
 endif()
 
 # project
+add_subdirectory(3rdParty)
 add_subdirectory(Core)
 add_subdirectory(Runtime)
 add_subdirectory(Networking)
