--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -6,12 +6,21 @@ file(GLOB_RECURSE SRC_FILES
 	Source/*.h
 )
 
-set(SourceDir ${PROJECT_SOURCE_DIR}/Source)
+set(SourceDir $Source)
 
+include_directories (${SourceDir})
+include_directories ("Source")
 include_directories ("../Core/Source")
 include_directories ("../Rendering/Source")
 include_directories ("../Include/glm")
+include_directories (${SDL2_INCLUDE_DIR})
+include_directories ("../3rdParty/assimp/include")
+include_directories ("${CMAKE_BINARY_DIR}/3rdParty/assimp/include")
+
 add_library(Engine STATIC ${SRC_FILES})
 
 target_link_libraries(Engine Rendering)
 target_link_libraries(Engine Core)
+target_link_libraries(Engine ${SDL2_LIBRARIES})
+target_link_libraries(Engine ${SDL2IMAGE_LIBRARY})
+target_link_libraries(Engine assimp)
