NetSocket (WIP) NetMessage

--- a/Networking/CMakeLists.txt
+++ b/Networking/CMakeLists.txt
@@ -8,4 +8,6 @@ file(GLOB_RECURSE SRC_FILES
 
 set(SourceDir ${PROJECT_SOURCE_DIR}/Source)
 
+include_directories ("../Core/Source")
+
 add_library(Networking STATIC ${SRC_FILES})
