--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -12,6 +12,7 @@ include_directories (${SourceDir})
 include_directories ("Source")
 include_directories ("../Core/Source")
 include_directories ("../Rendering/Source")
+include_directories ("../Networking/Source")
 include_directories ("../Include/glm")
 include_directories (${SDL2_INCLUDE_DIR})
 include_directories ("../3rdParty/assimp/include")
@@ -21,6 +22,6 @@ add_library(Engine STATIC ${SRC_FILES})
 
 target_link_libraries(Engine Rendering)
 target_link_libraries(Engine Core)
+target_link_libraries(Engine Networking)
 target_link_libraries(Engine ${SDL2_LIBRARIES})
-target_link_libraries(Engine ${SDL2IMAGE_LIBRARY})
 target_link_libraries(Engine assimp)
