GameNetwork (WIP) NetworkManager (WIP) GameNetwork test project

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -7,7 +7,7 @@ file(GLOB_RECURSE SRC_FILES
 )
 
 set(TestType "sockets" CACHE STRING "Type of test")
-set_property(CACHE TestType PROPERTY STRINGS sockets core rendering)
+set_property(CACHE TestType PROPERTY STRINGS sockets core rendering gamenetwork)
 
 if(TestType STREQUAL "core")
 	add_definitions(-DMING3D_TESTTYPE=1)
@@ -15,9 +15,12 @@ elseif(TestType STREQUAL "sockets")
 	add_definitions(-DMING3D_TESTTYPE=2)
 elseif(TestType STREQUAL "rendering")
 	add_definitions(-DMING3D_TESTTYPE=3)
+elseif(TestType STREQUAL "gamenetwork")
+	add_definitions(-DMING3D_TESTTYPE=4)
 endif()
 
 include_directories ("../Core/Source")
+include_directories ("../Engine/Source")
 include_directories ("../Networking/Source")
 include_directories ("../Rendering/Source")
 include_directories ("../Include/glm")
@@ -25,6 +28,7 @@ include_directories ("../Include/glm")
 add_executable(Tests ${SRC_FILES})
 
 target_link_libraries(Tests Core)
+target_link_libraries(Tests Engine)
 target_link_libraries(Tests Networking)
 target_link_libraries(Tests Rendering)
 
