RPC support (WIP)

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -7,7 +7,7 @@ file(GLOB_RECURSE SRC_FILES
 )
 
 set(TestType "sockets" CACHE STRING "Type of test")
-set_property(CACHE TestType PROPERTY STRINGS sockets core rendering gamenetwork)
+set_property(CACHE TestType PROPERTY STRINGS sockets core rendering gamenetwork rpc)
 
 if(TestType STREQUAL "core")
 	add_definitions(-DMING3D_TESTTYPE=1)
@@ -17,6 +17,8 @@ elseif(TestType STREQUAL "rendering")
 	add_definitions(-DMING3D_TESTTYPE=3)
 elseif(TestType STREQUAL "gamenetwork")
 	add_definitions(-DMING3D_TESTTYPE=4)
+elseif(TestType STREQUAL "rpc")
+	add_definitions(-DMING3D_TESTTYPE=5)
 endif()
 
 include_directories ("../Core/Source")
