Editor (WIP) Camera (WIP) Support for multiple cameras and render windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,5 @@ add_subdirectory(Tests)
 add_subdirectory(Networking)
 add_subdirectory(Rendering)
 add_subdirectory(Engine)
+add_subdirectory(NativeUI)
+add_subdirectory(Editor)
