--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -6,10 +6,11 @@ file(GLOB_RECURSE SRC_FILES
 	Source/*.h
 )
 
-set(SourceDir $Source)
+set(PHYSX_INC_DIR "${EXTERNAL_LIB_DIR}/physx/include")
+set(PHYSX_LIB_DIR "${EXTERNAL_LIB_DIR}/physx/lib")
 
-include_directories (${SourceDir})
 include_directories ("Source")
+include_directories (${PHYSX_INC_DIR})
 include_directories ("../Core/Source")
 include_directories ("../Rendering/Source")
 include_directories ("../Networking/Source")
@@ -25,3 +26,23 @@ target_link_libraries(Engine Core)
 target_link_libraries(Engine Networking)
 target_link_libraries(Engine ${SDL2_LIBRARIES})
 target_link_libraries(Engine assimp)
+target_link_libraries(Engine assimp)
+
+target_link_libraries(Engine debug ${PHYSX_LIB_DIR}/vc14-win32/Debug/PhysX3DEBUG_x86.lib)
+target_link_libraries(Engine debug ${PHYSX_LIB_DIR}/vc14-win32/Debug/PhysX3CommonDEBUG_x86.lib)
+target_link_libraries(Engine debug ${PHYSX_LIB_DIR}/vc14-win32/Debug/PhysX3ExtensionsDEBUG.lib)
+target_link_libraries(Engine debug ${PHYSX_LIB_DIR}/vc14-win32/Debug/PxFoundationDEBUG_x86.lib)
+target_link_libraries(Engine optimized ${PHYSX_LIB_DIR}/vc14-win32/Release/PhysX3_x86.lib)
+target_link_libraries(Engine optimized ${PHYSX_LIB_DIR}/vc14-win32/Release/PhysX3Common_x86.lib)
+target_link_libraries(Engine optimized ${PHYSX_LIB_DIR}/vc14-win32/Release/PhysX3Extensions.lib)
+target_link_libraries(Engine optimized ${PHYSX_LIB_DIR}/vc14-win32/Release/PxFoundation_x86.lib)
+
+# Copy DLLs     TODO: Make a function to simplify this
+if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+    execute_process(COMMAND cmake -E copy ${PHYSX_LIB_DIR}/vc14-win32/Debug/PhysX3DEBUG_x86.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/PhysX3DEBUG_x86.dll)
+	execute_process(COMMAND cmake -E copy ${PHYSX_LIB_DIR}/vc14-win32/Debug/PxFoundationDEBUG_x86.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/PxFoundationDEBUG_x86.dll)
+	execute_process(COMMAND cmake -E copy ${PHYSX_LIB_DIR}/vc14-win32/Debug/PhysX3CommonDEBUG_x86.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/PhysX3CommonDEBUG_x86.dll)
+	execute_process(COMMAND cmake -E copy ${PHYSX_LIB_DIR}/vc14-win32/Release/PhysX3_x86.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Release/PhysX3_x86.dll)
+	execute_process(COMMAND cmake -E copy ${PHYSX_LIB_DIR}/vc14-win32/Release/PxFoundation_x86.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Release/PxFoundation_x86.dll)
+	execute_process(COMMAND cmake -E copy ${PHYSX_LIB_DIR}/vc14-win32/Release/PhysX3Common_x86.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Release/PhysX3Common_x86.dll)
+endif()
