Added support for: VC14-Win32, VC14-Win64, VC15-Win32, VC15-Win64

--- a/3rdParty/CMakeLists.txt
+++ b/3rdParty/CMakeLists.txt
@@ -2,6 +2,8 @@ project(3rDParty)
 
 ADD_SUBDIRECTORY(assimp)
 
-set(${ASSIMP_BUILD_ASSIMP_TOOLS} FALSE)
-set(${ASSIMP_BUILD_SAMPLES} FALSE)
-set(${ASSIMP_BUILD_TESTS} FALSE)
+set(${ASSIMP_BUILD_ASSIMP_TOOLS} OFF CACHE BOOL "" FORCE)
+set(${ASSIMP_BUILD_SAMPLES} OFF CACHE BOOL "" FORCE)
+set(${ASSIMP_BUILD_TESTS} OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_NONFREE_C4D_IMPORTER OFF CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_ASSIMP_VIEW OFF CACHE BOOL "" FORCE)
