--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -1,5 +1,30 @@
 cmake_minimum_required(VERSION 3.3)
 
+# Copy DLL from the given path to the EXE binary immediate directory (will be copied to output dir in the end)
+function(copy_dlls bindir outdir dllnames)
+    FOREACH(dllname ${dllnames})
+    set(curr_dll ${bindir}/${dllname})
+    if(EXISTS ${curr_dll})
+        #add_custom_command(TARGET Engine POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${curr_dll}" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/debug/${dllname}")
+        execute_process(COMMAND cmake -E copy ${curr_dll} ${outdir}/${dllname})
+    else()
+        message("File doesn't exist: ${curr_dll}")
+    endif()
+    ENDFOREACH()
+endfunction()
+
+# Link to a list of libraries
+function(link_libs libdir libnames config)
+    FOREACH(libname ${libnames})
+        set(curr_lib ${libdir}/${libname})
+        if(EXISTS ${curr_lib})
+            target_link_libraries(Engine ${config} ${curr_lib})
+        else()
+            message("File doesn't exist: ${curr_lib}")
+        endif()
+    ENDFOREACH()
+endfunction()
+
 # Gather c++ files
 file(GLOB_RECURSE SRC_FILES 
 	Source/*.cpp
@@ -7,7 +32,25 @@ file(GLOB_RECURSE SRC_FILES
 )
 
 set(PHYSX_INC_DIR "${EXTERNAL_LIB_DIR}/physx/include")
-set(PHYSX_LIB_DIR "${EXTERNAL_LIB_DIR}/physx/lib")
+if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+    if("${CMAKE_GENERATOR}" MATCHES "(Win64|IA64)")
+        set(VS_PLATFORM_NAME "x64")
+    else()
+        set(VS_PLATFORM_NAME "x86")
+    endif()
+    if(MSVC_VERSION GREATER_EQUAL 1910)
+        set(VS_COMPILER_NAME "vc15")
+    else()
+        set(VS_COMPILER_NAME "vc14")
+    endif()
+    set(PHYSX_LIB_DIR "${EXTERNAL_LIB_DIR}/physx/lib/${VS_COMPILER_NAME}/${VS_PLATFORM_NAME}")
+    set(PHYSX_BIN_DIR "${EXTERNAL_LIB_DIR}/physx/bin/${VS_COMPILER_NAME}/${VS_PLATFORM_NAME}")
+
+    set(PHYSX_RELESE_BINS PhysX3_${VS_PLATFORM_NAME}.dll PhysX3Common_${VS_PLATFORM_NAME}.dll PxFoundation_${VS_PLATFORM_NAME}.dll)
+    set(PHYSX_DEBUG_BINS PhysX3CommonDEBUG_${VS_PLATFORM_NAME}.dll PhysX3DEBUG_${VS_PLATFORM_NAME}.dll PxFoundationDEBUG_${VS_PLATFORM_NAME}.dll)
+    set(PHYSX_RELESE_LIBS PhysX3_${VS_PLATFORM_NAME}.lib PhysX3Common_${VS_PLATFORM_NAME}.lib PhysX3Extensions.lib PxFoundation_${VS_PLATFORM_NAME}.lib)
+    set(PHYSX_DEBUG_LIBS PhysX3CommonDEBUG_${VS_PLATFORM_NAME}.lib PhysX3DEBUG_${VS_PLATFORM_NAME}.lib PhysX3ExtensionsDEBUG.lib PxFoundationDEBUG_${VS_PLATFORM_NAME}.lib)
+endif()
 
 include_directories ("Source")
 include_directories (${PHYSX_INC_DIR})
@@ -28,21 +71,10 @@ target_link_libraries(Engine ${SDL2_LIBRARIES})
 target_link_libraries(Engine assimp)
 target_link_libraries(Engine assimp)
 
-target_link_libraries(Engine debug ${PHYSX_LIB_DIR}/vc14-win32/Debug/PhysX3DEBUG_x86.lib)
-target_link_libraries(Engine debug ${PHYSX_LIB_DIR}/vc14-win32/Debug/PhysX3CommonDEBUG_x86.lib)
-target_link_libraries(Engine debug ${PHYSX_LIB_DIR}/vc14-win32/Debug/PhysX3ExtensionsDEBUG.lib)
-target_link_libraries(Engine debug ${PHYSX_LIB_DIR}/vc14-win32/Debug/PxFoundationDEBUG_x86.lib)
-target_link_libraries(Engine optimized ${PHYSX_LIB_DIR}/vc14-win32/Release/PhysX3_x86.lib)
-target_link_libraries(Engine optimized ${PHYSX_LIB_DIR}/vc14-win32/Release/PhysX3Common_x86.lib)
-target_link_libraries(Engine optimized ${PHYSX_LIB_DIR}/vc14-win32/Release/PhysX3Extensions.lib)
-target_link_libraries(Engine optimized ${PHYSX_LIB_DIR}/vc14-win32/Release/PxFoundation_x86.lib)
-
-# Copy DLLs     TODO: Make a function to simplify this
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-    execute_process(COMMAND cmake -E copy ${PHYSX_LIB_DIR}/vc14-win32/Debug/PhysX3DEBUG_x86.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/PhysX3DEBUG_x86.dll)
-	execute_process(COMMAND cmake -E copy ${PHYSX_LIB_DIR}/vc14-win32/Debug/PxFoundationDEBUG_x86.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/PxFoundationDEBUG_x86.dll)
-	execute_process(COMMAND cmake -E copy ${PHYSX_LIB_DIR}/vc14-win32/Debug/PhysX3CommonDEBUG_x86.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/PhysX3CommonDEBUG_x86.dll)
-	execute_process(COMMAND cmake -E copy ${PHYSX_LIB_DIR}/vc14-win32/Release/PhysX3_x86.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Release/PhysX3_x86.dll)
-	execute_process(COMMAND cmake -E copy ${PHYSX_LIB_DIR}/vc14-win32/Release/PxFoundation_x86.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Release/PxFoundation_x86.dll)
-	execute_process(COMMAND cmake -E copy ${PHYSX_LIB_DIR}/vc14-win32/Release/PhysX3Common_x86.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Release/PhysX3Common_x86.dll)
+    link_libs(${PHYSX_LIB_DIR} "${PHYSX_RELESE_LIBS}" optimized)
+    link_libs(${PHYSX_LIB_DIR} "${PHYSX_DEBUG_LIBS}" debug)
+
+    copy_dlls(${PHYSX_BIN_DIR} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/release "${PHYSX_RELESE_BINS}")
+    copy_dlls(${PHYSX_BIN_DIR} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/debug "${PHYSX_DEBUG_BINS}")
 endif()
