--- a/Rendering/CMakeLists.txt
+++ b/Rendering/CMakeLists.txt
@@ -41,14 +41,21 @@ include_directories(${GLEW_INCLUDE_DIRS})
 include_directories ("../3rdParty/assimp/include") #TODO: Rendering project should not read files
 include_directories ("${CMAKE_BINARY_DIR}/3rdParty/assimp/include") #TODO: Rendering project should not read files
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+    include_directories($ENV{DXSDK_DIR}Include)
     include_directories($ENV{DXSDK_DIR}/Include)
 endif()
 
 # Link libraries
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-    target_link_libraries(Rendering $ENV{DXSDK_DIR}Lib/x86/d3d11.lib)
-    target_link_libraries(Rendering $ENV{DXSDK_DIR}Lib/x86/d3dx11.lib)
-    target_link_libraries(Rendering $ENV{DXSDK_DIR}Lib/x86/d3dcompiler.lib)
+    if("${CMAKE_GENERATOR}" MATCHES "(Win64|IA64)")
+        target_link_libraries(Rendering $ENV{DXSDK_DIR}Lib/x64/d3d11.lib)
+        target_link_libraries(Rendering $ENV{DXSDK_DIR}Lib/x64/d3dx11.lib)
+        target_link_libraries(Rendering $ENV{DXSDK_DIR}Lib/x64/d3dcompiler.lib)
+    else()
+        target_link_libraries(Rendering $ENV{DXSDK_DIR}Lib/x86/d3d11.lib)
+        target_link_libraries(Rendering $ENV{DXSDK_DIR}Lib/x86/d3dx11.lib)
+        target_link_libraries(Rendering $ENV{DXSDK_DIR}Lib/x86/d3dcompiler.lib)
+    endif()
 endif()
 target_link_libraries(Rendering ${SDL2_LIBRARIES})
 target_link_libraries(Rendering ${SDL2IMAGE_LIBRARY})
