OpenGL fix + link to correct version of GLEW

--- a/Rendering/CMakeLists.txt
+++ b/Rendering/CMakeLists.txt
@@ -22,7 +22,13 @@ find_package(GLEW)
 if(NOT GLEW_FOUND)
     set(GLEW_SEARCH_PATH "${EXTERNAL_LIB_DIR}/glew-2.1.0" CACHE PATH "GLEW path")
     list(APPEND CMAKE_PREFIX_PATH "${GLEW_SEARCH_PATH}")
-    list(APPEND CMAKE_LIBRARY_PATH "${GLEW_SEARCH_PATH}/lib/Release/Win32")
+    if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+        if("${CMAKE_GENERATOR}" MATCHES "(Win64|IA64)")
+            list(APPEND CMAKE_LIBRARY_PATH "${GLEW_SEARCH_PATH}/lib/Release/x64")
+        else()
+            list(APPEND CMAKE_LIBRARY_PATH "${GLEW_SEARCH_PATH}/lib/Release/Win32")
+        endif()
+    endif()
     find_package(GLEW REQUIRED)
 endif()
 
