Added a CMake variable for defining MING3D_FORCE_OPENGL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,11 @@ endif()
 
 set(MING3D_BUILD_EDITOR ON CACHE BOOL "Build editor project")
 set(MING3D_BUILD_TESTS ON CACHE BOOL "Build test project")
+set(MING3D_FORCE_OPENGL OFF CACHE BOOL "Use OpenGL as the preferred graphics API")
+
+IF(MING3D_FORCE_OPENGL)
+	add_definitions(-DMING3D_FORCE_OPENGL)
+endif()
 
 # project
 add_subdirectory(3rdParty)
