Removed D3DX, since it's deprecated. DirectX SDK is no longer a dependency - only Windows SDK.

--- a/Rendering/CMakeLists.txt
+++ b/Rendering/CMakeLists.txt
@@ -46,21 +46,15 @@ include_directories(${SDL2_INCLUDE_DIR})
 include_directories(${GLEW_INCLUDE_DIRS})
 include_directories ("../3rdParty/assimp/include") #TODO: Rendering project should not read files
 include_directories ("${BUILD_ROOT}/3rdParty/assimp/include") #TODO: Rendering project should not read files
-if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-    include_directories($ENV{DXSDK_DIR}Include)
-    include_directories($ENV{DXSDK_DIR}/Include)
-endif()
 
 # Link libraries
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     if("${CMAKE_GENERATOR}" MATCHES "(Win64|IA64)")
-        target_link_libraries(Rendering $ENV{DXSDK_DIR}Lib/x64/d3d11.lib)
-        target_link_libraries(Rendering $ENV{DXSDK_DIR}Lib/x64/d3dx11.lib)
-        target_link_libraries(Rendering $ENV{DXSDK_DIR}Lib/x64/d3dcompiler.lib)
+        target_link_libraries(Rendering d3d11.lib)
+        target_link_libraries(Rendering d3dcompiler.lib)
     else()
-        target_link_libraries(Rendering $ENV{DXSDK_DIR}Lib/x86/d3d11.lib)
-        target_link_libraries(Rendering $ENV{DXSDK_DIR}Lib/x86/d3dx11.lib)
-        target_link_libraries(Rendering $ENV{DXSDK_DIR}Lib/x86/d3dcompiler.lib)
+        target_link_libraries(Rendering d3d11.lib)
+        target_link_libraries(Rendering d3dcompiler.lib)
     endif()
 endif()
 target_link_libraries(Rendering ${SDL2_LIBRARIES})
