--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -72,9 +72,11 @@ target_link_libraries(Engine assimp)
 target_link_libraries(Engine assimp)
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-    link_libs(${PHYSX_LIB_DIR} "${PHYSX_RELESE_LIBS}" optimized)
-    link_libs(${PHYSX_LIB_DIR} "${PHYSX_DEBUG_LIBS}" debug)
+    if(MING3D_PHYSICS_API STREQUAL "PhysX")
+        link_libs(${PHYSX_LIB_DIR} "${PHYSX_RELESE_LIBS}" optimized)
+        link_libs(${PHYSX_LIB_DIR} "${PHYSX_DEBUG_LIBS}" debug)
 
-    copy_dlls(${PHYSX_BIN_DIR} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/release "${PHYSX_RELESE_BINS}")
-    copy_dlls(${PHYSX_BIN_DIR} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/debug "${PHYSX_DEBUG_BINS}")
+        copy_dlls(${PHYSX_BIN_DIR} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/release "${PHYSX_RELESE_BINS}")
+        copy_dlls(${PHYSX_BIN_DIR} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/debug "${PHYSX_DEBUG_BINS}")
+    endif()
 endif()
