Build fixes for SDL. Don't need to use a CMake script for SDL2 on linux.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,15 @@ set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT "Runtime" )
 
 project(Ming3D)
 
+
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+
 set(CMAKE_BUILD_TYPE Debug)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/CMake/")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/CMake/SDL2_image")
+if(WIN32)
+    set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/CMake/SDL2")
+endif()
 
 set(BUILD_ROOT "${CMAKE_CURRENT_BINARY_DIR}")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
@@ -17,6 +23,10 @@ set(SDL_SEARCH_PATH ${EXTERNAL_LIB_DIR})
 
 # Find includes in corresponding build directories
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+set(BUILD_ROOT "${CMAKE_SOURCE_DIR}/build")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build")
+set(ROOT_DIR "${CMAKE_SOURCE_DIR}")
 
 # Cache variables
 set(MING3D_BUILD_TESTS ON CACHE BOOL "Build test project")
