--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+      with: 
+        submodules: true
     - name: Get dependencies
       run: |
         sudo apt-get update
