Upgraded to Physx 4.1

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -34,12 +34,16 @@ file(GLOB_RECURSE SRC_FILES
 
 set(PHYSX_INC_DIR "${EXTERNAL_LIB_DIR}/physx/include")
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-    if("${CMAKE_GENERATOR}" MATCHES "(Win64|IA64)")
+    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
         set(VS_PLATFORM_NAME "x64")
+        set(PHYSX_PLATFORM_NAME "64")
     else()
         set(VS_PLATFORM_NAME "x86")
+        set(PHYSX_PLATFORM_NAME "32")
     endif()
-    if(MSVC_VERSION GREATER_EQUAL 1910)
+    if(MSVC_VERSION GREATER_EQUAL 1920)
+        set(VS_COMPILER_NAME "vc16")
+    elseif(MSVC_VERSION GREATER_EQUAL 1910)
         set(VS_COMPILER_NAME "vc15")
     else()
         set(VS_COMPILER_NAME "vc14")
@@ -47,10 +51,10 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     set(PHYSX_LIB_DIR "${EXTERNAL_LIB_DIR}/physx/lib/${VS_COMPILER_NAME}/${VS_PLATFORM_NAME}")
     set(PHYSX_BIN_DIR "${EXTERNAL_LIB_DIR}/physx/bin/${VS_COMPILER_NAME}/${VS_PLATFORM_NAME}")
 
-    set(PHYSX_RELESE_BINS PhysX3_${VS_PLATFORM_NAME}.dll PhysX3Common_${VS_PLATFORM_NAME}.dll PxFoundation_${VS_PLATFORM_NAME}.dll)
-    set(PHYSX_DEBUG_BINS PhysX3CommonDEBUG_${VS_PLATFORM_NAME}.dll PhysX3DEBUG_${VS_PLATFORM_NAME}.dll PxFoundationDEBUG_${VS_PLATFORM_NAME}.dll)
-    set(PHYSX_RELESE_LIBS PhysX3_${VS_PLATFORM_NAME}.lib PhysX3Common_${VS_PLATFORM_NAME}.lib PhysX3Extensions.lib PxFoundation_${VS_PLATFORM_NAME}.lib)
-    set(PHYSX_DEBUG_LIBS PhysX3CommonDEBUG_${VS_PLATFORM_NAME}.lib PhysX3DEBUG_${VS_PLATFORM_NAME}.lib PhysX3ExtensionsDEBUG.lib PxFoundationDEBUG_${VS_PLATFORM_NAME}.lib)
+    set(PHYSX_RELESE_BINS PhysX_${PHYSX_PLATFORM_NAME}.dll PhysXCommon_${PHYSX_PLATFORM_NAME}.dll PhysXFoundation_${PHYSX_PLATFORM_NAME}.dll)
+    set(PHYSX_DEBUG_BINS PhysXCommon_${PHYSX_PLATFORM_NAME}.dll PhysX_${PHYSX_PLATFORM_NAME}.dll PhysXFoundation_${PHYSX_PLATFORM_NAME}.dll)
+    set(PHYSX_RELESE_LIBS PhysX_${PHYSX_PLATFORM_NAME}.lib PhysXCommon_${PHYSX_PLATFORM_NAME}.lib PhysXExtensions_static_${PHYSX_PLATFORM_NAME}.lib PhysXFoundation_${PHYSX_PLATFORM_NAME}.lib)
+    set(PHYSX_DEBUG_LIBS PhysXCommon_${PHYSX_PLATFORM_NAME}.lib PhysX_${PHYSX_PLATFORM_NAME}.lib PhysXExtensions_static_${PHYSX_PLATFORM_NAME}.lib PhysXFoundation_${PHYSX_PLATFORM_NAME}.lib)
 endif()
 
 include_directories ("Source")
@@ -74,10 +78,10 @@ target_link_libraries(Engine assimp)
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     if(MING3D_PHYSICS_API STREQUAL "PhysX")
-        link_libs(${PHYSX_LIB_DIR} "${PHYSX_RELESE_LIBS}" optimized)
-        link_libs(${PHYSX_LIB_DIR} "${PHYSX_DEBUG_LIBS}" debug)
+        link_libs(${PHYSX_LIB_DIR}/release "${PHYSX_RELESE_LIBS}" optimized)
+        link_libs(${PHYSX_LIB_DIR}/debug "${PHYSX_DEBUG_LIBS}" debug)
 
-        copy_dlls(${PHYSX_BIN_DIR} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/release "${PHYSX_RELESE_BINS}")
-        copy_dlls(${PHYSX_BIN_DIR} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/debug "${PHYSX_DEBUG_BINS}")
+        copy_dlls(${PHYSX_BIN_DIR}/release ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/release "${PHYSX_RELESE_BINS}")
+        copy_dlls(${PHYSX_BIN_DIR}/debug ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/debug "${PHYSX_DEBUG_BINS}")
     endif()
 endif()
