Fixed SampleType CMake

--- a/Samples/CMakeLists.txt
+++ b/Samples/CMakeLists.txt
@@ -10,21 +10,21 @@ file(GLOB_RECURSE SRC_FILES
 set(SampleProject "game" CACHE STRING "Type of samples")
 set_property(CACHE SampleProject PROPERTY STRINGS game sockets core rendering gamenetwork rpc replication physics)
 
-if(TestType STREQUAL "core")
+if(SampleProject STREQUAL "core")
 	add_definitions(-DMING3D_TESTTYPE=1)
-elseif(TestType STREQUAL "sockets")
+elseif(SampleProject STREQUAL "sockets")
 	add_definitions(-DMING3D_TESTTYPE=2)
-elseif(TestType STREQUAL "rendering")
+elseif(SampleProject STREQUAL "rendering")
 	add_definitions(-DMING3D_TESTTYPE=3)
-elseif(TestType STREQUAL "gamenetwork")
+elseif(SampleProject STREQUAL "gamenetwork")
 	add_definitions(-DMING3D_TESTTYPE=4)
-elseif(TestType STREQUAL "rpc")
+elseif(SampleProject STREQUAL "rpc")
 	add_definitions(-DMING3D_TESTTYPE=5)
-elseif(TestType STREQUAL "replication")
+elseif(SampleProject STREQUAL "replication")
 	add_definitions(-DMING3D_TESTTYPE=6)
-elseif(TestType STREQUAL "physics")
+elseif(SampleProject STREQUAL "physics")
 	add_definitions(-DMING3D_TESTTYPE=7)
-elseif(TestType STREQUAL "game")
+elseif(SampleProject STREQUAL "game")
 	add_definitions(-DMING3D_TESTTYPE=8)
 endif()
 
