sdl2_image is now referenced through Conan

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,8 +84,13 @@ if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
 endif()
 
 include(${CMAKE_BINARY_DIR}/conan.cmake)
+
+conan_add_remote(NAME bincrafters INDEX 1 URL https://bincrafters.jfrog.io/artifactory/api/conan/conan-legacy-inexorgame VERIFY_SSL True)
 conan_cmake_run(CONANFILE conanfile.txt BASIC_SETUP CMAKE_TARGETS BUILD missing)
 #conan_basic_setup()
+#conan_cmake_configure(CONANFILE conanfile.txt)
+#conan_cmake_autodetect(settings)
+#conan_cmake_install(PATH_OR_REFERENCE . BUILD missing REMOTE conan-center SETTINGS ${settings})
 
 # project
 add_subdirectory(Core)
