--- a/Samples/CMakeLists.txt
+++ b/Samples/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.3)
 project(Samples)
 
+find_package(assimp REQUIRED)
+
 # Gather c++ files
 file(GLOB_RECURSE SRC_FILES 
 	Source/*.cpp
@@ -30,14 +32,13 @@ elseif(SampleProject STREQUAL "multiwindow")
 	add_definitions(-DMING3D_TESTTYPE=9)
 endif()
 
+include_directories (${SDL2_INCLUDE_DIRS})
+include_directories (${assimp_INCLUDE_DIRS})
 include_directories ("../Core/Source")
 include_directories ("../Engine/Source")
 include_directories ("../Networking/Source")
 include_directories ("../Rendering/Source")
 include_directories ("../Include/glm")
-include_directories ("../3rdParty/assimp/include")
-include_directories (${SDL2_INCLUDE_DIR})
-include_directories ("${BUILD_ROOT}/3rdParty/assimp/include")
 
 add_executable(Samples ${SRC_FILES})
 
