--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.3)
 project(Engine)
 
 find_package(assimp REQUIRED)
+find_package(SDL2 REQUIRED)
+find_package(sdl2_image REQUIRED)
 
 # Copy DLL from the given path to the EXE binary immediate directory (will be copied to output dir in the end)
 function(copy_dlls bindir outdir dllnames)
@@ -62,6 +64,7 @@ endif()
 include_directories ("Source")
 include_directories (${PHYSX_INC_DIR})
 include_directories (${SDL2_INCLUDE_DIRS})
+include_directories (${sdl2_image_INCLUDE_DIRS})
 include_directories (${assimp_INCLUDE_DIRS})
 include_directories ("../Core/Source")
 include_directories ("../Rendering/Source")
